dark mode fix

--- a/style.css
+++ b/style.css
@@ -642,10 +642,6 @@ footer p {
 
 
 
-* button {
-  text-decoration: none;
-  color: black;
-}
 
 
 
@@ -852,7 +848,6 @@ button {
   padding-right: 1rem;
   border: 1px solid black;
   border-radius: 5%;
-  margin-top: 0.5rem;
 }
 
 button:hover {
